[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
bytemuck = { version = "1.23.0", default-features = false, features = [
  "derive",
] }
pollster = { version = "0.4.0", default-features = false }
wgpu = { version = "25.0.2", default-features = false, features = ["wgsl"] }
cosmic-text = { version = "0.14.2", default-features = false, features = [
  "fontconfig",
  "swash",
] }
smol_str = { version = "0.3.2", default-features = false }

# Env Logging dependencies
env_logger = { version = "0.11.8", default-features = false, optional = true }
log = { version = "0.4.20", default-features = false, optional = true }
tracing = { version = "0.1.41", default-features = false, optional = true }

# Winit dependencies
winit = { version = "0.30.12", default-features = false, optional = true }

# SCTK dependencies
anyhow = { version = "1.0.100", default-features = false, optional = true }
smithay-client-toolkit = { version = "0.20.0", default-features = false, features = [
  "calloop",
  "xkbcommon",
], optional = true }
wayland-client = { version = "0.31", default-features = false, optional = true }
wayland-backend = { version = "0.3", features = [
  "client_system",
], optional = true }
calloop = { version = "0.14", optional = true }

[features]
default = []

vulkan = ["wgpu/vulkan"]
metal = ["wgpu/metal"]

env_logging = ["dep:env_logger", "dep:log", "dep:tracing"]
winit = ["dep:winit"]
sctk = [
  "dep:anyhow",
  "dep:smithay-client-toolkit",
  "dep:wayland-client",
  "dep:wayland-backend",
  "dep:calloop",
]

[dev-dependencies]
winit = "0.30.12"
anyhow = "1.0.100"
image = { version = "0.25.8", features = ["jpeg"] }

[[example]]
name = "winit"
required-features = ["winit"]

[[example]]
name = "sctk"
required-features = ["sctk"]
