[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.0", default-features = false, features = [
  "derive",
] }
const-crc32 = "1.3.0"
env_logger = { version = "0.11.8", default-features = false }
glyphon = { version = "0.9.0", default-features = false }
image = { version = "0.25.6", default-features = false }
pollster = { version = "0.4.0", default-features = false }
tracing = { version = "0.1.41", default-features = false }
wgpu = { version = "25.0.2", default-features = false, features = ["wgsl", "vulkan", "metal"] }
winit = { version = "0.30.11", default-features = false, optional = true }

[features]
default = []
winit = ["dep:winit"]
